[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/logo.png" type="Texture" id=1]
[ext_resource path="res://assets/completed-tasks-frame.png" type="Texture" id=2]
[ext_resource path="res://UI.gd" type="Script" id=3]
[ext_resource path="res://assets/GL-10.png" type="Texture" id=4]
[ext_resource path="res://assets/Sofia Pro Bold Az.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/GL-29.png" type="Texture" id=6]
[ext_resource path="res://assets/Sofia Pro Regular Az.otf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.913725, 0.0980392, 0.462745, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 0.8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0.160784, 0.356863, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 0.8

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/MarginContainer/VBoxContainer/MessagePopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/MarginContainer/VBoxContainer/MessagePopup:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/MarginContainer/VBoxContainer/MessagePopup:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 300 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/MarginContainer/VBoxContainer/MessagePopup:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_message"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/MarginContainer/VBoxContainer/MessagePopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/MarginContainer/VBoxContainer/MessagePopup:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 584.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 97.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 143.0
margin_bottom = 84.0
rect_min_size = Vector2( 143, 84 )
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Progress" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 641.0
margin_bottom = 97.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Progress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 14
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskProgress" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Progress/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 468.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 32 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 33.0

[node name="Control" type="Control" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 657.0
margin_right = 729.0
margin_bottom = 97.0
rect_min_size = Vector2( 72, 0 )

[node name="Clock" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 745.0
margin_right = 956.5
margin_bottom = 97.6
rect_min_size = Vector2( 211.5, 97.6 )
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Clock"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/Clock/CenterContainer"]
margin_left = 62.0
margin_top = 27.0
margin_right = 148.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "3:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagePopup" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 992.0
margin_bottom = 662.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/MessagePopup"]
margin_left = 207.0
margin_right = 784.0
margin_bottom = 362.0
rect_min_size = Vector2( 577, 362 )
texture = ExtResource( 6 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/MessagePopup/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/MessagePopup/TextureRect/MarginContainer"]
margin_left = 8.0
margin_top = 142.0
margin_right = 569.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 4 )
text = "Complete the tasks!
Introduction text placeholder
Game starts after this goes away"
align = 1
valign = 1

[node name="GameTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fade_message = SubResource( 6 )

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
